fix(Computer Core): Fixes computer core history scrollbar. Closes #2510

--- a/client/src/components/views/ComputerCore/style.scss
+++ b/client/src/components/views/ComputerCore/style.scss
@@ -42,6 +42,7 @@
   .user-row {
     flex: 1;
     display: flex;
+    max-height: 42%;
     justify-content: space-between;
     border-bottom: solid 1px rgba(255, 255, 255, 0.5);
     .history-block {
